Bugfix: increase cookie banner z-index and button color

--- a/src/features/CookieBanner/styles/index.css
+++ b/src/features/CookieBanner/styles/index.css
@@ -7,6 +7,7 @@
   text-align: left;
   display: flex;
   align-items: center;
+  z-index: 10000;
 
   .wundery-cookie-banner-info {
     margin-right: 10px;
@@ -30,6 +31,8 @@
     font-weight: bold;
     padding: 4px 8px;
     flex-wrap: wrap;
+    outline: 0;
+    color: black;
   }
 
   &.wundery-cookie-banner-top, &.wundery-cookie-banner-bottom {
